updated index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,8 +15,10 @@ Reserve funding prototype
     <ul class="govuk-list govuk-list--bullet govuk-body-l">
       <li style="margin-bottom:20px"><a href="/17-0/setup" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">Version 17</a> <span style="color:red">(in progress)</span> 
         <ul class="govuk-list govuk-list--bullet">
+            
+          <li style="margin-bottom: 0px">Search employers <a href="https://trello.com/c/KKKH7aNg" target="_blank" class="govuk-link govuk-link--no-visited-state">card #71</a> <span style="color:red">(in progress)</span></li>
           <li style="margin-bottom: 0px">Start date: I don't know option incl. dropout - REMOVED <a href="https://trello.com/c/7brJTKdL" target="_blank" class="govuk-link govuk-link--no-visited-state">card #144</a></li>
-          <li style="margin-bottom: 0px">Manage filters mobile layout (provider) <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li>
+          <li style="margin-bottom: 0px">Manage filters mobile layout and working (provider) <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li>
           <li style="margin-bottom: 0px">Emails: provider assigned/deleted on reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a> </li>
           <li style="margin-bottom: 0px">Providers not seeing reservations they havent made (employer + provider) <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a> <span style="color:red">(in progress)</span></li>
           <li style="margin-bottom: 0px">Manage table headers (provider) <a href="https://trello.com/c/Vck042Jr" target="_blank" class="govuk-link govuk-link--no-visited-state">card #157</a></li>
