--- a/app/views/17-0/reserve-reservations.html
+++ b/app/views/17-0/reserve-reservations.html
@@ -49,7 +49,7 @@
 
           {% if _reservationstotal >= myData.limit %}
             <div class="govuk-inset-text">
-              <p class="govuk-heading">[You have reached the limit of the number of funding reservations you can make.]</p>
+              <p class="govuk-heading">You have reached the limit of the number of funding reservations you can make.</p>
             </div>
           {% else %}
             <p class="govuk-heading-m"><a class="govuk-link govuk-link--no-visited-state" href="{{_reserveStartURL}}?type=emp">Reserve more funding</a></p>
@@ -66,12 +66,12 @@
                   <th scope="col" class="govuk-table__header">Organisation</th>
                   {% endif %}
                   <th scope="col" class="govuk-table__header">Apprenticeship training course</th>
-                  <th scope="col" class="govuk-table__header">Start date</th>
+                  <th scope="col" class="govuk-table__header">Apprenticeship start date</th>
                   {% if myData.assignproviders == "true" %}
                     <th scope="col" class="govuk-table__header">Training provider</th>
                     <th scope="col" class="govuk-table__header"></th>
                   {% else %}
-                    <th scope="col" class="govuk-table__header">[Also visible to]</th>
+                    <th scope="col" class="govuk-table__header">Also visible to</th>
                     <th scope="col" class="govuk-table__header"></th>
                     <th scope="col" class="govuk-table__header"></th>
                   {% endif %}
@@ -141,17 +141,15 @@
                     {% else %}
                       <td class="govuk-table__cell"  style="white-space: nowrap;">
                         {% if _reservation.createdby == "employer" %}
-                          <!-- <strong class="govuk-tag">[You]</strong><br> -->
-                          <strong>[Only {{_account.name}}]</strong>
+                          <strong>Only {{_account.name}}</strong>
                         {% else %}
-                          [{{_reservation.createdby}}]
+                          {{_reservation.createdby}}
                         {% endif %}
                       </td>
                       <td class="govuk-table__cell" >
                         {% if _reservation.status == "available" %}
                           {% if _reservation.createdby == "employer" %}
                               <a href="#add" class="govuk-link govuk-link--no-visited-state">Add&nbsp;apprentice</a>
-                              <!-- <strong class="govuk-tag" style="margin-top:5px">[TODO]</strong> -->
                           {% else %}
                             <a href="#add" class="govuk-link govuk-link--no-visited-state">Add&nbsp;apprentice</a>
                           {% endif %}
