17-0 Apprenticeship start date updated

--- a/app/views/17-0/reserve-reservations-pro.html
+++ b/app/views/17-0/reserve-reservations-pro.html
@@ -126,7 +126,7 @@
           <!-- Start dates filter -->
           <div class="govuk-form-group" style="margin-bottom: 20px">
             <label class="govuk-label" for="date_ft">
-              Start date
+                Apprenticeship start date
             </label>
             <select class="govuk-select filter" id="date_ft" name="date_ft" style="min-width: 100%">
               <option value="all" {% if myData.filterDate == "all" %}selected{% endif %}>All</option>
@@ -176,7 +176,7 @@
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Employer</th>
             <th scope="col" class="govuk-table__header">Apprenticeship training course</th>
-            <th scope="col" class="govuk-table__header">Start date</th>
+            <th scope="col" class="govuk-table__header">Apprenticeship start date</th>
             <th scope="col" class="govuk-table__header"></th>
             <th scope="col" class="govuk-table__header"></th>
           </tr>
