--- a/app/views/17-0/reserve-check-answers.html
+++ b/app/views/17-0/reserve-check-answers.html
@@ -51,7 +51,7 @@
             {% if myData.entitycount > 1 %}
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Employer
+                    Organisation
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {% for _entity in _account.employers %}
@@ -61,7 +61,9 @@
                     {% endfor %}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    
+                    <a class="govuk-link govuk-link--no-visited-state" href="reserve-choose-org">
+                        Change
+                    </a>
                 </dd>
             </div>
             {% endif %}
