--- a/app/views/17-0/reserve-confirmation.html
+++ b/app/views/17-0/reserve-confirmation.html
@@ -45,7 +45,7 @@
             {% if myData.entitycount > 1 %}
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Employer
+                    Organisation
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {% for _entity in _account.employers %}
@@ -66,17 +66,6 @@
                             {{_course.name}} - Level {{_course.level}}
                         {% endif %}
                     {% endfor %}
-                    <br>
-                    <details class="govuk-details" data-module="govuk-details">
-                        <summary class="govuk-details__summary">
-                            <span class="govuk-details__summary-text">
-                                Can I change the course?
-                            </span>
-                        </summary>
-                        <div class="govuk-details__text">
-                            You can change the course when you add an apprentice's details.
-                        </div>
-                    </details>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -107,11 +96,6 @@
             </div>
             {% endif %}
         </dl>
-
-        <h2 class="govuk-heading-l">Making changes</h2>
-
-        <p class="govuk-body">You can add or change the apprenticeship training when you add an apprentice's details.</p>
-        <p class="govuk-body">You will need to reserve new funding to change the apprenticeship training start date to outside of the 3-month window you originally selected.</p>
 
         <form method="POST">
 
