--- a/app/views/17-0/reserve-reservations.html
+++ b/app/views/17-0/reserve-reservations.html
@@ -159,7 +159,7 @@
                       </td>
                       <td class="govuk-table__cell" >
                           {% if _reservation.status == "available" %}
-                          <a href="reserve-delete?delete={{_reservation.id}}" class="govuk-link govuk-link--no-visited-state">Delete</a>
+                          <a href="reserve-delete?delete={{_reservation.id}}&type=emp" class="govuk-link govuk-link--no-visited-state">Delete</a>
                           {% else %}
                           &nbsp;
                           {% endif %}
