updated index notes

--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -229,7 +229,7 @@
                                 <div class="govuk-checkboxes__item">
                                     <input class="govuk-checkboxes__input" id="setupNotOwned" name="setupNotOwned" type="checkbox" value="setupNotOwned" data-option="setupNotOwned" {% if myData.filtersnotowned == "true" %}checked{% endif %} >
                                     <label class="govuk-label govuk-checkboxes__label" for="setupNotOwned">
-                                    Include 'Show not owned'
+                                    Include 'Show not owned' (not functioning)
                                     </label>
                                 </div>
                             </div>
