--- a/app/views/17-0/reserve-email-added-to-res-pro.html
+++ b/app/views/17-0/reserve-email-added-to-res-pro.html
@@ -83,7 +83,7 @@
                 <p class="govuk-body">KENDLE LTD assigned a funding reservation to you:</p>
 
                 <ul class="govuk-list govuk-list--bullet">
-                    <li>apprenticeship training start date: Nov 2019 to Jan 2020</li>
+                    <li>apprenticeship start date: Nov 2019 to Jan 2020</li>
                     <li>apprenticeship training course: Business Administrator - Level 3</li>
                 </ul>
 
