--- a/app/views/17-0/reserve-email-created-res-emp.html
+++ b/app/views/17-0/reserve-email-created-res-emp.html
@@ -77,7 +77,7 @@
                 <p class="govuk-body">TRAINING UK reserved apprenticeship funding on your behalf for the following:</p>
 
                 <ul class="govuk-list govuk-list--bullet">
-                    <li>apprenticeship training course start date: Nov 2019 to Jan 2020</li>
+                    <li>apprenticeship start date: Nov 2019 to Jan 2020</li>
                     <li>apprenticeship training course: Business Administrator - Level 3</li>
                 </ul>
 
