--- a/app/views/17-0/reserve-email-deleted-from-res-pro.html
+++ b/app/views/17-0/reserve-email-deleted-from-res-pro.html
@@ -83,7 +83,7 @@
                 <p class="govuk-body">KENDLE LTD has removed you from a funding reservation made for the following:</p>
 
                 <ul class="govuk-list govuk-list--bullet">
-                    <li>apprenticeship training start date: Dec 2019 to Feb 2020</li>
+                    <li>apprenticeship start date: Dec 2019 to Feb 2020</li>
                     <li>apprenticeship training course: Business Administrator - Level 3</li>
                 </ul>
                 
