--- a/app/views/17-0/reserve-email-deleted-res-emp.html
+++ b/app/views/17-0/reserve-email-deleted-res-emp.html
@@ -77,7 +77,7 @@
                 <p class="govuk-body">TRAINING UK deleted the funding reservation made for the following:</p>
 
                 <ul class="govuk-list govuk-list--bullet">
-                    <li>apprenticeship training course start date: {{myData.RangeFromNowFriendly}}</li>
+                    <li>apprenticeship start date: {{myData.RangeFromNowFriendly}}</li>
                     <li>apprenticeship training course: Business Administrator - Level 3</li>
                 </ul>
 
