--- a/app/views/17-0/reserve-manage-reservation.html
+++ b/app/views/17-0/reserve-manage-reservation.html
@@ -76,7 +76,7 @@
 
         <p class="govuk-body"><span class="govuk-!-font-weight-bold">Organisation</span><br>{{_entityNameLabel}}</p>
         <p class="govuk-body"><span class="govuk-!-font-weight-bold">Apprenticeship training course</span><br>{{_courseLabel}}</p>
-        <p class="govuk-body"><span class="govuk-!-font-weight-bold">Start date</span><br>{{_startDateLabel}}</p>
+        <p class="govuk-body"><span class="govuk-!-font-weight-bold">Apprenticeship start date</span><br>{{_startDateLabel}}</p>
 
         <!-- Manage provider -->
         {% if _reservation.provideractive %}
