--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,6 +24,7 @@ Reserve funding prototype
           <li style="margin-bottom: 0px">Unsigned agreement <a href="https://trello.com/c/ZoM3pVgz" target="_blank" class="govuk-link govuk-link--no-visited-state">card #151</a> <span style="color:red">(in progress)</span> </li>
           <li style="margin-bottom: 0px">Manage table headers (provider) <a href="https://trello.com/c/Vck042Jr" target="_blank" class="govuk-link govuk-link--no-visited-state">card #157</a></li>
           <li style="margin-bottom: 0px">Emails: deleted and created (employer) <a href="https://trello.com/c/mCCd8nbd" target="_blank" class="govuk-link govuk-link--no-visited-state">card #158</a></li>
+          <li style="margin-bottom: 0px">'Start date' content consistency <a href="https://trello.com/c/zCLYiHMI" target="_blank" class="govuk-link govuk-link--no-visited-state">card #159</a> </li>          
           <li style="margin-bottom: 0px">'Employer' changed to 'Organisation' (employer) <a href="https://trello.com/c/PGN09ZYF" target="_blank" class="govuk-link govuk-link--no-visited-state">card #160</a></li>
         </ul>
       </li>
