--- a/app/views/17-0/reserve-check-answers-pro.html
+++ b/app/views/17-0/reserve-check-answers-pro.html
@@ -71,7 +71,7 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Apprenticeship training start date
+                    Apprenticeship start date
                 </dt>
                 <dd class="govuk-summary-list__value">
                     {% for _startDate in myData.startDates %}
