--- a/app/views/17-0/reserve-choose-start-date.html
+++ b/app/views/17-0/reserve-choose-start-date.html
@@ -61,7 +61,7 @@
                     {% if myData.validationErrors.whichStartDateAnswer %}
                     <span id="whichStartDateAnswer-error" class="govuk-error-message">
                         <span class="govuk-visually-hidden">Error:</span>
-                        You must select a start date
+                        {{myData.validationErrors.whichStartDateAnswer.message}}
                     </span>
                     {% endif %}
                     <div class="govuk-radios" id="whichStartDateAnswer">
