--- a/app/views/17-0/reserve-confirmation-pro.html
+++ b/app/views/17-0/reserve-confirmation-pro.html
@@ -99,7 +99,7 @@
             <li>the employer</li>
             <li>the apprenticeship start date, outside of the 3 month window you selected</li>
         </ul>
-        <p>To select a different employer or apprenticeship training start date, you will need to start a new funding reservation.</p>
+        <p>To select a different employer or apprenticeship start date, you will need to start a new funding reservation.</p>
         
         
 
