--- a/app/views/17-0/setup.html
+++ b/app/views/17-0/setup.html
@@ -395,8 +395,13 @@
                     <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-unsigned-agreement-pro">/reserve-unsigned-agreement-pro</a></td>
                 </tr>
                 <tr class="govuk-table__row">
-                    <th class="govuk-table__cell">Agreement not signed (transactor)</th>
-                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-unsigned-agreement-emp?ao=false">/reserve-unsigned-agreement-emp?ao=false</a></td>
+                    <th class="govuk-table__cell">Agreement not signed (transactor) - with 1 account owner</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-unsigned-agreement-emp?ao=false&ac=1">/reserve-unsigned-agreement-emp?ao=false&ac=1</a></td>
+                    <td class="govuk-table__cell"  style="color:grey">n/a</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__cell">Agreement not signed (transactor) - with 2 account owners</th>
+                    <td class="govuk-table__cell" ><a class="govuk-link govuk-link--no-visited-state" href="reserve-unsigned-agreement-emp?ao=false&ac=2">/reserve-unsigned-agreement-emp?ao=false&ac=2</a></td>
                     <td class="govuk-table__cell"  style="color:grey">n/a</td>
                 </tr>
 
