--- a/app/assets/sass/components/_pagination.scss
+++ b/app/assets/sass/components/_pagination.scss
@@ -38,7 +38,7 @@
   .pagination__link {
     display: block;
     padding: 5px 10px;
-    text-decoration: none;
+    // text-decoration: none;
   
     &:hover, &:focus {
       background: #F8F8F8;
@@ -51,6 +51,7 @@
       border: none;
       pointer-events: none;
       cursor: default;
+      text-decoration: none;
   
       &:hover, &:focus {
         color: #0B0C0C;
