error message audit validation messages

--- a/app/views/17-0/reserve-choose-training.html
+++ b/app/views/17-0/reserve-choose-training.html
@@ -56,7 +56,7 @@
                 {% if myData.validationErrors.whichTrainingCourseAnswer %}
                 <span id="whichTrainingCourseAnswer-error" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span>
-                    {{myData.validationErrors.whichTrainingCourseAnswer.message}} from the list
+                    {{myData.validationErrors.whichTrainingCourseAnswer.message}}
                 </span>
                 {% endif %}
                 <div class="autocomplete-wrapper">
