--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,7 @@ Reserve funding prototype
         <ul class="govuk-list govuk-list--bullet">
           <li style="margin-bottom: 0px">Confirmation page (employer) <a href="https://trello.com/c/IeXX5ylB" target="_blank" class="govuk-link govuk-link--no-visited-state">card #30</a></li>
           <li style="margin-bottom: 0px">Search employers <a href="https://trello.com/c/KKKH7aNg" target="_blank" class="govuk-link govuk-link--no-visited-state">card #71</a> </li>
+          <li style="margin-bottom: 0px">Error message audit <a href="https://trello.com/c/T2O5IaC5" target="_blank" class="govuk-link govuk-link--no-visited-state">card #85</a> <span style="color:red">(in progress)</span></li>
           <li style="margin-bottom: 0px">Start date: I don't know option incl. dropout - REMOVED <a href="https://trello.com/c/7brJTKdL" target="_blank" class="govuk-link govuk-link--no-visited-state">card #144</a></li>
           <li style="margin-bottom: 0px">Manage filters mobile layout and working (provider) <a href="https://trello.com/c/9dnOLy9f" target="_blank" class="govuk-link govuk-link--no-visited-state">card #148</a></li>
           <li style="margin-bottom: 0px">Emails: provider assigned/deleted on reservation <a href="https://trello.com/c/2olNeEjU" target="_blank" class="govuk-link govuk-link--no-visited-state">card #149</a> </li>
