--- a/app/views/17-0/reserve-no-permission.html
+++ b/app/views/17-0/reserve-no-permission.html
@@ -13,11 +13,15 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-l">You need permission to do this</h1>
+        <h1 class="govuk-heading-xl">You do not have permission</h1>
 
-        <p class="govuk-body">An employer needs to give you permission first before you can do this on their behalf.</p>
+        <p class="govuk-body">ASTON MARTIN LTD needs to give you permission to reserve and manage funding on their behalf.</p>
+
+        <p class="govuk-body">They can give you permission in ‘training provider permissions’ within their apprenticeship service account.</p>
         
-        <a href="provider-home" role="button" draggable="false" tabindex="1" class="govuk-button">Go to homepage</a>
+        <p class="govuk-body">
+            <a href="provider-home" role="button" draggable="false" tabindex="1" class="govuk-button">Return to homepage</a>
+        </p>
 
     </div>
 </div>
