--- a/app/views/17-0/reserve-404.html
+++ b/app/views/17-0/reserve-404.html
@@ -22,12 +22,14 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
+      
         <h1 class="govuk-heading-xl">
             Page not found
         </h1>
 
-        <p>If you entered a web address, check that it's correct. Or you can <a href="{{_homepageURL}}" class="govuk-link" >return to the home page</a>.</p>
+        <p class="govuk-body">If the web address is correct or you selected a link or button, <a href="#" class="govuk-link">contact the Manage apprenticeships service helpdesk</a> if you need to speak to someone about managing funds.</p>
+        <p class="govuk-body">If you typed the web address, check it is correct.</p>
+        <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
 
     </div>
 </div>
