--- a/app/views/17-0/reserve-500.html
+++ b/app/views/17-0/reserve-500.html
@@ -24,16 +24,12 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        There's been an error
+          There is a problem with the service
       </h1>
 
-      {% if _account.type == "pro" %}
-        <p class="govuk-body">This error has been logged and will be investigated.</p>
-      {% else %}
-        <p class="govuk-body">If you entered a web address please check it was correct.</p>
-      {% endif %}
-
-      <p class="govuk-body">You can return to the <a href="{{_homepageURL}}" class="govuk-link">start page</a> to try again.</p>
+      <p class="govuk-body">This has been logged and will be investigated.</p>
+      <p class="govuk-body">Try again later.</p>
+      <p class="govuk-body"><a href="#" class="govuk-link">Contact the Manage apprenticeships service helpdesk</a> if you need to speak to someone about managing funds.</p>
 
     </div>
 </div>
